Deletion of Recipie with Action Controller

--- a/ionic-course/src/app/recipies/recipie-detail/recipie-detail.page.html
+++ b/ionic-course/src/app/recipies/recipie-detail/recipie-detail.page.html
@@ -5,9 +5,11 @@
       <!--<ion-back-button defaultHref="/recipie"></ion-back-button>-->
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-button slot="end" (click)="deleteRecipie(selectedRecipie.id)">
-      <ion-icon class=".ion-float-right" name="trash-bin-outline"></ion-icon>
-    </ion-button>
+    <ion-buttons slot="primary">
+      <ion-button (click)="deleteRecipie(selectedRecipie.id)">
+        <ion-icon slot="icon-only" name="trash-bin-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
